--- a/.github/workflows/fly-deploy.yml
+++ b/.github/workflows/fly-deploy.yml
@@ -16,3 +16,6 @@
 #      - run: flyctl deploy --remote-only
 #        env:
 #          FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
+
+
+# Test -- Does push to main still trigger this.
